[package]
name = "macros"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = "2.0.105"

[lints]
workspace = true
